--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 axum = { version = "0.8.4", features = ["macros"] }
+chrono = "0.4.42"
 indexmap = "2.11.4"
 reqwest = {version = "0.12.23", features = ["cookies", "json"]}
 scraper = "0.24.0"
