--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,13 @@ edition = "2024"
 
 [dependencies]
 axum = { version = "0.8.4", features = ["macros"] }
+
+lambda_http = "0.14.0"
+lambda_runtime = "0.13.0"
+tokio = { version = "1.47.1", features = ["full"] } 
+reqwest = { version = "0.12.23", features = ["cookies", "json"] }
+scraper = "0.24.0"
+serde = { version = "1.0.227", features = ["derive"] }
+serde_json = "1.0.145"
 chrono = "0.4.42"
 indexmap = "2.11.4"
-reqwest = {version = "0.12.23", features = ["cookies", "json"]}
-scraper = "0.24.0"
-serde = {version = "1.0.227", features = ["derive"]}
-serde_json = "1.0.145"
-tokio = {version = "1.47.1", features = ["full"]}
