--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2024"
 
 [dependencies]
 axum = { version = "0.8.4", features = ["macros"] }
-
 lambda_http = "0.14.0"
 lambda_runtime = "0.13.0"
 tokio = { version = "1.47.1", features = ["full"] } 
@@ -15,3 +14,4 @@ serde = { version = "1.0.227", features = ["derive"] }
 serde_json = "1.0.145"
 chrono = "0.4.42"
 indexmap = "2.11.4"
+axum-lambda = "0.6"
